# obs-text-pango

./: CMakeLists.txt  README.md  text-pango.c  text-pango.h  utils.c  utils.h
data/locale/: en-US.ini
